update to Groovy 2.4.10

--- a/GroovyLabPr/nbproject/project.properties
+++ b/GroovyLabPr/nbproject/project.properties
@@ -29,7 +29,6 @@ dist.jar=${dist.dir}/GroovyLab.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.groovyall.jar=../lib/groovyall.jar
 file.reference.ant-1.8.4.jar=../lib/ant-1.8.4.jar
 file.reference.antlr-2.7.7.jar=../lib/antlr-2.7.7.jar
 file.reference.ApacheCommonMaths.jar=../lib/ApacheCommonMaths.jar
@@ -49,6 +48,7 @@ file.reference.f2jutil.jar=../lib/f2jutil.jar
 file.reference.fjbg.jar=../lib/fjbg.jar
 file.reference.forkjoin.jar=../lib/forkjoin.jar
 file.reference.funclate-131.jar=../lib/funclate-131.jar
+file.reference.groovyall.jar=../lib/groovyall.jar
 file.reference.GroovyLab-GroovyLab-Src=../GroovyLab-Src
 file.reference.GroovySciHelp.jar=../lib/GroovySciHelp.jar
 file.reference.gsl-linux-x86.jar=../lib/gsl-linux-x86.jar
@@ -90,11 +90,16 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.GroovyLab-GroovyLab-Src}:\
-    ${file.reference.groovyall.jar}:\
+    ${file.reference.ApacheCommonMaths.jar}:\
+    ${file.reference.GroovySciHelp.jar}:\
+    ${file.reference.JASYMCA.jar}:\
+    ${file.reference.JFreeChart.jar}:\
+    ${file.reference.JavaCompiler.jar}:\
     ${file.reference.MTJColtSGTJCUDA.jar}:\
+    ${file.reference.NumericalRecipesNUMAL.jar}:\
+    ${file.reference.PDFRenderer.jar}:\
     ${file.reference.ant-1.8.4.jar}:\
     ${file.reference.antlr-2.7.7.jar}:\
-    ${file.reference.ApacheCommonMaths.jar}:\
     ${file.reference.arpack_combo-0.1.jar}:\
     ${file.reference.asm-4.0.jar}:\
     ${file.reference.asm-all-4.1.jar}:\
@@ -111,7 +116,6 @@ javac.classpath=\
     ${file.reference.fjbg.jar}:\
     ${file.reference.forkjoin.jar}:\
     ${file.reference.funclate-131.jar}:\
-     ${file.reference.GroovySciHelp.jar}:\
     ${file.reference.gsl-linux-x86.jar}:\
     ${file.reference.gsl-linux-x86_64.jar}:\
     ${file.reference.gsl-macosx-x86_64.jar}:\
@@ -121,31 +125,27 @@ javac.classpath=\
     ${file.reference.hamcrest-core-1.3.jar}:\
     ${file.reference.hamcrest-library-1.3.jar}:\
     ${file.reference.itext-2.1.5.jar}:\
+    ${file.reference.jSciJPlasmaJSparseJTransforms.jar}:\
     ${file.reference.jansi-1.6.jar}:\
     ${file.reference.jarjar-1.1.jar}:\
-    ${file.reference.JASYMCA.jar}:\
-    ${file.reference.JavaCompiler.jar}:\
     ${file.reference.javacpp.jar}:\
     ${file.reference.jblas.jar}:\
     ${file.reference.jdk6Help.jar}:\
-    ${file.reference.JFreeChart.jar}:\
     ${file.reference.jhall.jar}:\
     ${file.reference.jline-2.11.jar}:\
     ${file.reference.jna-4.0.0.jar}:\
-    ${file.reference.jSciJPlasmaJSparseJTransforms.jar}:\
     ${file.reference.jsearch.jar}:\
     ${file.reference.junit-4.10.jar}:\
     ${file.reference.junit-dep-4.8.2.jar}:\
     ${file.reference.language_support.jar}:\
     ${file.reference.matlabscilab.jar}:\
     ${file.reference.netlib-java-0.9.3.jar}:\
-    ${file.reference.NumericalRecipesNUMAL.jar}:\
     ${file.reference.objenesis-1.2.jar}:\
     ${file.reference.optimization.jar}:\
-    ${file.reference.PDFRenderer.jar}:\
     ${file.reference.rhino-1.7R4.jar}:\
     ${file.reference.rsyntaxtextarea-2.5.6.jar}:\
-    ${file.reference.stringtemplate-3.2.1.jar}
+    ${file.reference.stringtemplate-3.2.1.jar}:\
+    ${file.reference.groovyall.jar}
    
 # Space-separated list of extra javac options
 javac.compilerargs=
