--- a/GroovyLabPr/nbproject/private/private.properties
+++ b/GroovyLabPr/nbproject/private/private.properties
@@ -1,6 +1,6 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-javac.debug=true
+javac.debug=false
 javadoc.preview=true
-user.properties.file=/home/sterg/.netbeans/8.1/build.properties
+user.properties.file=/home/sterg/.netbeans/8.2/build.properties
