--- a/GroovyLabPr/nbproject/project.properties
+++ b/GroovyLabPr/nbproject/project.properties
@@ -1,4 +1,4 @@
-annotation.processing.enabled=true
+annotation.processing.enabled=false
 annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
@@ -6,7 +6,7 @@ annotation.processing.source.output=${build.generated.sources.dir}/ap-source-out
 application.title=GroovyLab
 application.vendor=sterg
 build.classes.dir=${build.dir}/classes
-build.classes.excludes=*.java,**/*.form
+build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
 build.dir=build
 build.generated.dir=${build.dir}/generated
@@ -48,6 +48,7 @@ file.reference.f2jutil.jar=../lib/f2jutil.jar
 file.reference.fjbg.jar=../lib/fjbg.jar
 file.reference.forkjoin.jar=../lib/forkjoin.jar
 file.reference.funclate-131.jar=../lib/funclate-131.jar
+file.reference.groovy-all-2.6.0-alpha-1-indy.jar=../lib/groovy-all-2.6.0-alpha-1-indy.jar
 file.reference.groovyall.jar=../lib/groovyall.jar
 file.reference.GroovyLab-GroovyLab-Src=../GroovyLab-Src
 file.reference.GroovySciHelp.jar=../lib/GroovySciHelp.jar
@@ -89,7 +90,6 @@ file.reference.stringtemplate-3.2.1.jar=../lib/stringtemplate-3.2.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.GroovyLab-GroovyLab-Src}:\
     ${file.reference.ApacheCommonMaths.jar}:\
     ${file.reference.GroovySciHelp.jar}:\
     ${file.reference.JASYMCA.jar}:\
@@ -116,6 +116,7 @@ javac.classpath=\
     ${file.reference.fjbg.jar}:\
     ${file.reference.forkjoin.jar}:\
     ${file.reference.funclate-131.jar}:\
+    ${file.reference.groovyall.jar}:\
     ${file.reference.gsl-linux-x86.jar}:\
     ${file.reference.gsl-linux-x86_64.jar}:\
     ${file.reference.gsl-macosx-x86_64.jar}:\
@@ -145,12 +146,12 @@ javac.classpath=\
     ${file.reference.rhino-1.7R4.jar}:\
     ${file.reference.rsyntaxtextarea-2.5.6.jar}:\
     ${file.reference.stringtemplate-3.2.1.jar}:\
-    ${file.reference.groovyall.jar}
-   
+    ${file.reference.GroovyLab-GroovyLab-Src}:\
+    ${file.reference.groovy-all-2.6.0-alpha-1-indy.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
-javac.external.vm=false
+javac.external.vm=true
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -177,8 +178,8 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
-    ${build.classes.dir}:\
-    ${javac.classpath}
+    ${javac.classpath}:\
+    ${build.classes.dir}
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
