--- a/GroovyLabPr/nbproject/project.properties
+++ b/GroovyLabPr/nbproject/project.properties
@@ -48,7 +48,6 @@ file.reference.f2jutil.jar=../lib/f2jutil.jar
 file.reference.fjbg.jar=../lib/fjbg.jar
 file.reference.forkjoin.jar=../lib/forkjoin.jar
 file.reference.funclate-131.jar=../lib/funclate-131.jar
-file.reference.groovy-all-2.6.0-alpha-1-indy.jar=../lib/groovy-all-2.6.0-alpha-1-indy.jar
 file.reference.groovyall.jar=../lib/groovyall.jar
 file.reference.GroovyLab-GroovyLab-Src=../GroovyLab-Src
 file.reference.GroovySciHelp.jar=../lib/GroovySciHelp.jar
@@ -146,8 +145,7 @@ javac.classpath=\
     ${file.reference.rhino-1.7R4.jar}:\
     ${file.reference.rsyntaxtextarea-2.5.6.jar}:\
     ${file.reference.stringtemplate-3.2.1.jar}:\
-    ${file.reference.GroovyLab-GroovyLab-Src}:\
-    ${file.reference.groovy-all-2.6.0-alpha-1-indy.jar}
+    ${file.reference.GroovyLab-GroovyLab-Src}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
